[package]
name = "pan"
version = "0.0.1"
authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]

[dependencies]
clap = "2.24.0"
distributary = { git = "https://github.com/mit-pdos/distributary", branch = "distributed-soup3" }
nom_sql = { git = "https://github.com/ms705/nom-sql.git", branch = "execute" }
rustyline = { git = "https://github.com/fintelia/rustyline", rev = "4503fc622c8d693729e4725ef73c91802e2b1aa7"}
slog = "2.0.2"
slog-term = "2.0.0"